--- a/fst/templates/register.html
+++ b/fst/templates/register.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-<h2>회원가입</h2>
-<form method="post">
-  <input name="username" placeholder="아이디"><br>
-  <input type="password" name="password" placeholder="비밀번호"><br>
-  <button type="submit">가입하기</button>
-</form>
-<a href="/login">로그인</a>
+    <h1>회원가입</h1>
+    <form method="POST">
+        <label>아이디: <input type="text" name="username"></label><br>
+        <label>비밀번호: <input type="password" name="password"></label><br>
+        <button type="submit">회원가입</button>
+    </form>
+    <a href="{{ url_for('login') }}">로그인으로 가기</a>
 </body>
 </html>
